# bares

./: README.md  author.md
data/: input_test.txt  output_test.txt
source/: CMakeLists.txt
source/include/: bares_manager.h  parser.h  token.h
source/lib/: stack.h  vector.h
source/src/: bares_manager.cpp  main.cpp  parser.cpp
